# Berlin_Winery_Analysis

./: .gitignore  EDEKA_ANALYSIS_SUMMARY.md  README.md  berlin_edekas.csv  berlin_edekas.json  berlin_edekas_real_map.html  berlin_wineries_real_map.html  create_edeka_map_visualization.py  create_real_map_visualization.py  create_winery_heatmap.py  create_winery_heatmap_improved.py  download_berlin_edekas.py  download_berlin_wineries.py  main.py  pyproject.toml  requirements.txt
data/: berlin_real_estate_annual_growth.csv  berlin_wineries.csv  berlin_wineries.json  berlin_wineries_historical_simulation.csv  berlin_wineries_recent.csv  berlin_wineries_recent.json  berlin_winery_annual_growth.csv  berlin_winery_growth_metrics.csv  berlin_winery_realestate_correlation.csv
outputs/: berlin_leading_indicator_analysis_report.md  berlin_recent_wineries_map.html  berlin_wineries_real_map.html  berlin_winery_density_map.html  berlin_winery_density_report.md  berlin_winery_growth_map.html  berlin_winery_growth_report.md  berlin_winery_realestate_correlation_map.html  berlin_winery_realestate_correlation_report.md  berlin_winery_supply_insights.md
scripts/: create_real_map_visualization.py  create_recent_wineries_from_existing.py  create_recent_wineries_map.py  create_temporal_leading_indicator_analysis.py  create_winery_density_map.py  create_winery_growth_analysis.py  create_winery_heatmap.py  create_winery_heatmap_improved.py  create_winery_realestate_correlation.py  download_berlin_wineries.py  download_recent_wineries.py
